@@ -221,6 +221,22 @@ name: links contained in parentheses
 in: 'This is a regular link (but in parentheses: "Google":http://www.google.com)'
 html: '<p>This is a regular link (but in parentheses: <a href="http://www.google.com">Google</a>)</p>'
 ---
+name: links containing parentheses without brackets
+in: 'This is a link to a "Wikipedia article about Textile":http://en.wikipedia.org/wiki/Textile_(markup_language)'
+html: '<p>This is a link to a <a href="http://en.wikipedia.org/wiki/Textile_(markup_language)">Wikipedia article about Textile</a></p>'
+---
+name: links containing parentheses period at end without brackets
+in: 'This is a link to a "Wikipedia article about Textile":http://en.wikipedia.org/wiki/Textile_(markup_language).'
+html: '<p>This is a link to a <a href="http://en.wikipedia.org/wiki/Textile_(markup_language)">Wikipedia article about Textile</a>.</p>'
+---
+name: broken links containing parentheses without brackets
+in: 'This is a link to a "Wikipedia article about Textile":http://en.wikipedia.org/wiki/Textile_(markup_language'
+html: '<p>This is a link to a <a href="http://en.wikipedia.org/wiki/Textile_(markup_language">Wikipedia article about Textile</a></p>'
+---
+name: links containing parentheses without brackets inside a parenthesis
+in: 'Textile is awesome! (Check out the "Wikipedia article about Textile":http://en.wikipedia.org/wiki/Textile_(markup_language))'
+html: '<p>Textile is awesome! (Check out the <a href="http://en.wikipedia.org/wiki/Textile_(markup_language)">Wikipedia article about Textile</a>)</p>'
+---
 name: quotes and follow link
 in: 'Some "text" followed by a "link":http://redcloth.org.'
 html: '<p>Some &#8220;text&#8221; followed by a <a href="http://redcloth.org">link</a>.</p>'
